# pelican

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: codeql.yml  docs.yml  publish.yml  scorecard.yml  tests.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/guides/: programmatic-usage.md
docs/docs/reference/: compilers.md  generator.md  loader.md  migration.md  operations.md  runner.md  schema.md
pelican/: __init__.py  _contex.py  _context.py  _types.py  _version.py  cli.py  generator.py  loader.py  migration.py  operations.py  registry.py  runner.py
pelican/compilers/: __init__.py  compiler.py  postgresql.py  sqlite.py
pelican/diff/: codegen.py  differ.py  discovery.py  extractor.py  inspector.py  normalizer.py  operations.py  schema.py  validator.py
pelican/diff/dialects/: __init__.py  base.py  postgresql.py  sqlite.py
pelican/schema/: __init__.py  helpers.py  hints.py  operations.py
pelican/templates/: autogenerate.template  migration.template
tests/: conftest.py  test_cli.py  test_loader.py  test_migration.py
tests/compilers/: conftest.py  test_postgresql.py  test_sqlite.py
tests/diff/: test_codegen.py  test_differ.py  test_extractor.py  test_inspector.py  test_normalizer.py  test_validator.py
tests/runner/: conftest.py  test_references.py  test_runner.py
