[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "pelican-migration"
version = "1.0.0-alpha"
authors = [
    { name="Simon Roy" },
]
description = "A modern migration tool for SQLAlchemy."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "click==8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "black==25.9.0",
    "mypy==1.18.2",
]

[project.urls]
"Source" = "https://github.com/PenguinBoi12/pelican"

[project.scripts]
pelican = "pelican.cli:cli"

[tool.setuptools]
packages = ["pelican"]
license-files = []

[tool.mypy]
exclude = ['pelican/templates']