[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "pelican-migration"
version = "1.0.0-alpha"
authors = [
    { name="Simon Roy", email="simon.roy1211@gmail.com" },
]
maintainers = [
    { name="Simon Roy", email="simon.roy1211@gmail.com" },
]
description = "A modern migration tool for SQLAlchemy."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "click==8.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "black==26.3.1",
    "mypy==1.20.1",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]>=1.0.4"
]

[project.urls]
"Source" = "https://github.com/PenguinBoi12/pelican"
"Issues" = "https://github.com/PenguinBoi12/pelican/issues"

[project.scripts]
pelican = "pelican.cli:cli"

[tool.setuptools]
packages = ["pelican"]
license-files = []

[tool.mypy]
exclude = ['pelican/templates']