[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pelican-migration"
description = "A modern migration tool for SQLAlchemy."
dynamic = ["version"]
authors = [
    { name="Simon Roy", email="simon.roy1211@gmail.com" },
]
maintainers = [
    { name="Simon Roy", email="simon.roy1211@gmail.com" },
]
keywords = ["sqlalchemy", "migration", "database", "schema", "alembic", "orm", "cli", "postgresql", "sqlite"]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "python-dotenv==1.2.2",
    "sqlalchemy==2.0.49",
    "sqlmodel==0.0.38",
    "click==8.3.2",
    "inflection==0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "black==26.3.1",
    "mypy==1.20.1",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]>=1.0.4"
]

[project.urls]
Source = "https://github.com/PenguinBoi12/pelican"
Repository = "https://github.com/PenguinBoi12/pelican.git"
Issues = "https://github.com/PenguinBoi12/pelican/issues"

[project.scripts]
pelican = "pelican.cli:cli"

[tool.setuptools]
packages = ["pelican"]
license-files = []

[tool.mypy]
exclude = ['pelican/templates']
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["pelican"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pelican/_version.py"

[tool.coverage.run]
omit = [
    "pelican/__init__.py",
]